@@ -1,3 +1,8 @@
+Dec 31, 2007 - chris
+o Most errors now emit a ham_trace debug messages, esp. HAM_INV_PARAMETER;
+    also, in release mode all messages now show the hamsterdb function name,
+    and in debug mode they show the hamsterdb source filename/line number
+
 Dec 30, 2007 - chris
 o The debug- and error-messages are now always compiled; the message handler
     of the debug build prints all messages, the handler of the release build
